feat: made a part of markup with slider

--- a/singolo1.css
+++ b/singolo1.css
@@ -24,6 +24,8 @@ span {
     color: #F06C64;
 }
 
+/* Header Styles */
+
 .header {
     background-color: #2D303A;
     padding:32px 32px 32px 38px;
@@ -31,6 +33,9 @@ span {
     border-bottom: #323746 solid 7px; 
 }
 
+.header a:hover{
+    color: #c7c7c7;
+}
 
 .header__logo {
     font-size: 25px;
@@ -47,13 +52,48 @@ span {
 .header__nav {
     padding: 9px 8px 0 0;
     flex-basis: 40%;
-} 
+}
+
+.header__nav ul li:first-child a{
+    color:#de655e;
+  
+}
+
+.header__nav ul li:first-child{
+    list-style-type: none;
+}
+
+.header__nav ul {
+    color: #393d4b;
+}
+
+/* Slider Styles */
+
 .slider{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: #F06C64;
     width: 100%;
     height: 601px;
     align-items: center;
+    border-bottom: #ea676b solid 7px;
 }
+
+.arrow{
+    opacity: 0.3;
+}
+
+.slider__iphoneVert img:last-child {
+    position: absolute;
+    top:27.5%;
+    left:24.5%;
+}
+
+.slider__iphoneHori img:last-child {
+    position: absolute;
+    top:36.5%;
+    left:47.5%;
+}
+
+/* Services Styles */
 
