--- a/singolo1.css
+++ b/singolo1.css
@@ -1,39 +1,57 @@
-html{
+html {
     box-sizing: border-box;
     max-width: 1020px;
     margin: 0 auto;
     font-family: 'Lato', sans-serif;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: inherit;
 }
 
-a{
+a {
     text-decoration: none;
     color: #ffffff;
     cursor: pointer;
-    
+}
+
+h1 {
+    padding-bottom: 20px;
+    font-size: 30px;
+    color: #8e919e;
+    font-weight: bold;
+}
+
+h4 {
+    padding-bottom: 15px;
+    font-size: 19px;
+    color: #666d89;
+    font-family: "Lato - Black";
+    font-weight: 900;
+    cursor: pointer;
 }
 
 li {
     font-size: 12px;
 }
 
-span {
+.header__logo span {
     color: #F06C64;
 }
+
 
 /* Header Styles */
 
 .header {
     background-color: #2D303A;
-    padding:32px 32px 32px 38px;
+    padding: 32px 32px 32px 38px;
     margin: 0 auto;
-    border-bottom: #323746 solid 7px; 
+    border-bottom: #323746 solid 7px;
 }
 
-.header a:hover{
+.header a:hover {
     color: #c7c7c7;
 }
 
@@ -41,12 +59,13 @@ span {
     font-size: 25px;
 }
 
-.header__wrapper, .header__wrapper ul {
+.header__wrapper,
+.header__wrapper ul {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    color: #ffffff;   
+    color: #ffffff;
 }
 
 .header__nav {
@@ -54,12 +73,11 @@ span {
     flex-basis: 40%;
 }
 
-.header__nav ul li:first-child a{
-    color:#de655e;
-  
+.header__nav ul li:first-child a {
+    color: #de655e;
 }
 
-.header__nav ul li:first-child{
+.header__nav ul li:first-child {
     list-style-type: none;
 }
 
@@ -67,33 +85,81 @@ span {
     color: #393d4b;
 }
 
+
 /* Slider Styles */
 
-.slider{
+.slider {
     display: flex;
     justify-content: space-evenly;
     background-color: #F06C64;
     width: 100%;
-    height: 601px;
+    height: 600px;
     align-items: center;
     border-bottom: #ea676b solid 7px;
 }
 
-.arrow{
+.slider__arrow {
     opacity: 0.3;
+}
+
+.slider__arrow:hover {
+    opacity: 0.8;
+}
+
+.slider__iphoneVert,
+.slider__iphoneHori {
+    position: relative;
 }
 
 .slider__iphoneVert img:last-child {
     position: absolute;
-    top:27.5%;
-    left:24.5%;
+    top: 65px;
+    left: 15px;
 }
 
 .slider__iphoneHori img:last-child {
     position: absolute;
-    top:36.5%;
-    left:47.5%;
+    top: 15px;
+    left: 60px;
 }
+
 
 /* Services Styles */
 
+.services {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 496px;
+    color: #666d89;
+    background-color: #f2f2f2;
+    padding: 60px 0 0 40px;
+}
+
+.services__info p {
+    font-size: 18px;
+    line-height: 1.8;
+    padding-bottom: 50px;
+}
+
+.services__info {
+    height: 100px;
+}
+
+.benefits {
+    display: grid;
+    flex-basis: 65%;
+    grid-template-rows: 86px 86px;
+    grid-template-columns: 70px 220px 70px 220px 70px 220px;
+    gap: 20px;
+    row-gap: 40px;
+}
+
+.benefits p {
+    font-size: 12px;
+    line-height: 1.8;
+}
+
+.benefits img {
+    cursor: pointer;
+}
