--- a/singolo1.css
+++ b/singolo1.css
@@ -34,6 +34,7 @@ html {
     box-sizing: border-box;
     max-width: 1020px;
     margin: 0 auto;
+    font-family: "Lato", sans-serif;
 }
 
  *,
@@ -46,7 +47,6 @@ a {
     text-decoration: none;
     color: #ffffff;
     cursor: pointer;
-    font-family: 'Lato Light';
 }
 
 h1 {
@@ -57,7 +57,7 @@ h1 {
 }
 
 h4 {
-    padding-bottom: 15px;
+    padding-bottom: 10px;
     font-size: 19px;
     color: #666d89;
     font-weight: 900;
@@ -121,12 +121,13 @@ li {
 
 .slider {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     background-color: #F06C64;
     width: 100%;
     height: 600px;
     align-items: center;
     border-bottom: #ea676b solid 7px;
+    padding: 0 45px;
 }
 
 .slider__arrow {
@@ -183,7 +184,7 @@ li {
     flex-basis: 65%;
     grid-template-rows: 86px 86px;
     grid-template-columns: 70px 220px 70px 220px 70px 220px;
-    gap: 20px;
+    gap: 15px;
     row-gap: 40px;
 }
 
