--- a/singolo3.css
+++ b/singolo3.css
@@ -138,6 +138,21 @@ textarea{
     padding-right: 10px;
 }
 
+.contact-information button{
+    margin-top: 125px;
+    padding: 5px 70px 5px 70px;
+    font-size: 15px;
+    border-radius: 50px;
+    border: 1px #F0D8D9 solid ;
+}
+
+button, 
+button:active, 
+button:focus {
+    outline: none;
+    cursor: pointer;
+}
+
 .footer {
     background-color: #2d303a;
     color: #5e657e;
@@ -155,4 +170,5 @@ textarea{
 .footer__links img{
     opacity: 0.7;
     padding-right: 2px;
+    cursor: pointer;
 }
