--- a/style.css
+++ b/style.css
@@ -4,195 +4,313 @@
     font-weight: 300;
     font-display: swap;
     src: local("Lato Light"), local("Lato-Light"), url(assets/Lato-Light.woff2) format("woff2");
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: "Lato";
     font-style: normal;
     font-weight: 400;
     font-display: swap;
     src: local("Lato Regular"), local("Lato-Regular"), url(assets/Lato-Regular.woff2) format("woff2");
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: "Lato";
     font-style: normal;
     font-weight: 700;
     font-display: swap;
     src: local("Lato Bold"), local("Lato-Bold"), url(assets/Lato-Bold.woff2) format("woff2");
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: "Lato";
     font-style: normal;
     font-weight: 900;
     font-display: swap;
     src: local("Lato Black"), local("Lato-Black"), url(assets/Lato-Black.woff2) format("woff2");
-  }
-  
-  html {
-      box-sizing: border-box;
-      max-width: 1020px;
-      margin: 0 auto;
-      font-family: "Lato", sans-serif;
-  }
-  
-   *,
-  *::before,
-  *::after {
-      box-sizing: inherit;
-  }
-  
-  a {
-      text-decoration: none;
-      color: #ffffff;
-      cursor: pointer;
-  }
-  
-  h1 {
-      padding-bottom: 20px;
-      font-size: 30px;
-      color: #8e919e;
-      font-weight: bold;
-  }
-  
-  h4 {
-      padding-bottom: 10px;
-      font-size: 19px;
-      color: #666d89;
-      font-weight: 900;
-      cursor: pointer;
-  }
-  
-  li {
-      font-size: 12px;
-  }
-  
-  .header__logo span {
-      color: #F06C64;
-  }
-  
-  
-  /* Header Styles */
-  
-  .header {
-      background-color: #2D303A;
-      padding: 32px 32px 32px 38px;
-      margin: 0 auto;
-      border-bottom: #323746 solid 7px;
-  }
-  
-  .header a:hover {
-      color: #c7c7c7;
-  }
-  
-  .header__logo {
-      font-size: 25px;
-  }
-  
-  .header__wrapper,
-  .header__wrapper ul {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-between;
-      color: #ffffff;
-  }
-  
-  .header__nav {
-      padding: 9px 8px 0 0;
-      flex-basis: 40%;
-  }
-  
-  .header__nav ul li:first-child a {
-      color: #de655e;
-  }
-  
-  .header__nav ul li:first-child {
-      list-style-type: none;
-  }
-  
-  .header__nav ul {
-      color: #393d4b;
-  }
-  
-  
-  /* Slider Styles */
-  
-  .slider {
-      display: flex;
-      justify-content: space-between;
-      background-color: #F06C64;
-      width: 100%;
-      height: 600px;
-      align-items: center;
-      border-bottom: #ea676b solid 7px;
-      padding: 0 45px;
-  }
-  
-  .slider__arrow {
-      opacity: 0.3;
-      cursor: pointer;
-  }
-  
-  .slider__arrow:hover {
-      opacity: 0.8;
-  }
-  
-  .slider__pictureLeft,
-  .slider__pictureRight {
-      position: relative;
-  }
-  
-  .slider__pictureLeft img:last-child {
-      position: absolute;
-      top: 65px;
-      left: 15px;
-  }
-  
-  .slider__pictureRight img:last-child {
-      position: absolute;
-      top: 15px;
-      left: 60px;
-  }
-  
-  
-  /* Services Styles */
-  
-  .services {
-      display: flex;
-      justify-content: space-between;
-      flex-direction: column;
-      height: 496px;
-      color: #666d89;
-      background-color: #f2f2f2;
-      padding: 60px 0 0 40px;
-  }
-  
-  .services__info p {
-      font-size: 18px;
-      line-height: 1.8;
-      padding-bottom: 50px;
-  }
-  
-  .services__info {
-      height: 100px;
-  }
-  
-  .services__benefits {
-      display: grid;
-      flex-basis: 65%;
-      grid-template-rows: 86px 86px;
-      grid-template-columns: 70px 220px 70px 220px 70px 220px;
-      gap: 15px;
-      row-gap: 40px;
-  }
-  
-  .services__benefits p {
-      font-size: 12px;
-      line-height: 1.8;
-  }
-  
-  .services__benefits img {
-      cursor: pointer;
-  }
+}
+
+html {
+    box-sizing: border-box;
+    max-width: 1020px;
+    margin: 0 auto;
+    font-family: "Lato", sans-serif;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+a {
+    text-decoration: none;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+h1 {
+    padding-bottom: 20px;
+    font-size: 30px;
+    color: #8e919e;
+    font-weight: bold;
+}
+
+h4 {
+    padding-bottom: 10px;
+    font-size: 19px;
+    color: #666d89;
+    font-weight: 900;
+    cursor: pointer;
+}
+
+li {
+    font-size: 12px;
+}
+
+.header__logo span {
+    color: #F06C64;
+}
+
+
+/* Header Styles */
+
+.header {
+    background-color: #2D303A;
+    padding: 32px 32px 32px 38px;
+    margin: 0 auto;
+    border-bottom: #323746 solid 7px;
+}
+
+.header a:hover {
+    color: #c7c7c7;
+}
+
+.header__logo {
+    font-size: 25px;
+}
+
+.header__wrapper,
+.header__wrapper ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    color: #ffffff;
+}
+
+.header__nav {
+    padding: 9px 8px 0 0;
+    flex-basis: 40%;
+}
+
+.header__nav ul li:first-child a {
+    color: #de655e;
+}
+
+.header__nav ul li:first-child {
+    list-style-type: none;
+}
+
+.header__nav ul {
+    color: #393d4b;
+}
+
+
+/* Slider Styles */
+
+.slider {
+    display: flex;
+    justify-content: space-between;
+    background-color: #F06C64;
+    width: 100%;
+    height: 600px;
+    align-items: center;
+    border-bottom: #ea676b solid 7px;
+    padding: 0 45px;
+}
+
+.slider__arrow {
+    opacity: 0.3;
+    cursor: pointer;
+}
+
+.slider__arrow:hover {
+    opacity: 0.8;
+}
+
+.slider__pictureLeft,
+.slider__pictureRight {
+    position: relative;
+}
+
+.slider__pictureLeft img:last-child {
+    position: absolute;
+    top: 65px;
+    left: 15px;
+}
+
+.slider__pictureRight img:last-child {
+    position: absolute;
+    top: 15px;
+    left: 60px;
+}
+
+
+/* Services Styles */
+
+.services {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 496px;
+    color: #666d89;
+    background-color: #f2f2f2;
+    padding: 60px 0 0 40px;
+}
+
+.services__info p {
+    font-size: 18px;
+    line-height: 1.8;
+    padding-bottom: 50px;
+}
+
+.services__info {
+    height: 100px;
+}
+
+.services__benefits {
+    display: grid;
+    flex-basis: 65%;
+    grid-template-rows: 86px 86px;
+    grid-template-columns: 70px 220px 70px 220px 70px 220px;
+    gap: 15px;
+    row-gap: 40px;
+}
+
+.services__benefits p {
+    font-size: 12px;
+    line-height: 1.8;
+}
+
+.services__benefits img {
+    cursor: pointer;
+}
+
+content {
+    display: block;
+    width: 100%;
+    height: 870px;
+    background-color: #2d303a;
+    padding: 62px 40px 73px 40px;
+}
+
+content h2 {
+    font-size: 32px;
+    font-family: "Lato-Black";
+    color: #666d89;
+    font-weight: 900;
+    padding-bottom: 26px;
+}
+
+content p {
+    color: #767e9e;
+    font-family: Lato;
+    font-size: 18px;
+    font-weight: 300;
+    padding-bottom: 18px;
+}
+
+content ul {
+    display: flex;
+    list-style-type: none;
+    padding-bottom: 18px;
+}
+
+content li {
+    border: 1px #626883 solid;
+    border-radius: 5px;
+    font-size: 11px;
+    font-family: "Lato";
+    font-weight: 400;
+    line-height: 21px;
+    color: #666d89;
+    padding: 0px 7px 0px 7px;
+    margin-right: 11px;
+    height: 22px;
+    vertical-align: middle;
+}
+
+content li:first-child {
+    color: #ffffff;
+    border: 1px #ffffff solid;
+}
+
+.content__grid-container {
+    display: grid;
+    grid-template-columns: 220px 220px 220px 220px;
+    grid-template-rows: 187px 187px 187px;
+    gap: 20px;
+
+}
+
+.contacts {
+    padding: 68px 15px 67px 40px;
+    width: 100%;
+    height: 728px;
+    background-color: #f2f2f2;
+}
+
+.contacts h2 {
+    color: #666d89;
+    font-family: "Lato - Black";
+    font-size: 31px;
+    font-weight: 900;
+    line-height: 17.86px;
+    padding-bottom: 25px;
+}
+
+.contacts p {
+    color: #767e9e;
+    font-family: Lato;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 30px;
+    padding-bottom: 45px;
+}
+
+.contacts__flex-items {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contacts__flex-items p {
+    color: #767e9e;
+    font-family: Lato;
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 21.56px;
+    padding: 10px 0 25px 0;
+}
+
+.contacts__flex-items h4 {
+    padding-top: 17px;
+    color: #666d89;
+    font-family: "Lato - Black";
+    font-size: 18px;
+    font-weight: 900;
+    line-height: 17.86px;
+}
+
+.social-links {
+    display: flex;
+}
+
+.social-links img {
+    padding: 0 4px 0 4px;
+}
+
+.social-links img:first-child {
+    padding-left: 0;
+
+}
